Pagination invisible links bugfix

--- a/resources/assets/frontend/sass/modules/_pagination.scss
+++ b/resources/assets/frontend/sass/modules/_pagination.scss
@@ -7,7 +7,6 @@
     }
 
     &.disabled {
-      opacity: 0;
       pointer-events: none;
     }
 
